# zot

./: .dir-locals.el  .hlint.yaml  default.nix  design.lisp  shell.nix  stack.yaml  zot.cabal
src/: Check.hs  Core.hs  Eval.hs  InferTest.hs  Main.hs  Reader.hs  ReaderTest.hs  Syntax.hs  TraverseTest.hs  Types.hs
src/Check/: Types.hs
src/Reader/: Types.hs
src/Syntax/: Types.hs
test/: Test.hs  ddd
test/Zot/Test/: Check.hs  Eval.hs  Instances.hs  Reader.hs  Syntax.hs
