name:          zot
version:       0.1.0.0
author:        Andrew Mcveigh
maintainer:    me@andrewmcveigh.com
build-type:    Simple
cabal-version: >= 2

library
  default-language: Haskell2010
  build-depends:    base < 5,
                    containers >= 0.5.10,
                    lens == 4.15.4,
                    mtl >= 2.2,
                    recursion-schemes == 5.0.2,
                    HUnit >= 1.6
  hs-source-dirs:   src
  ghc-options:      -Wall
                    -- -fwarn-incomplete-patterns
