name:          zot
version:       0.1.0.0
author:        Andrew Mcveigh
maintainer:    me@andrewmcveigh.com
build-type:    Simple
cabal-version: >= 2

library
  default-language:   Haskell2010
  build-depends:      base < 5,
                      containers >= 0.5.10,
                      HUnit >= 1.6,
                      lens == 4.15.4,
                      mtl >= 2.2,
                      protolude >= 0.2.1,
                      recursion-schemes == 5.0.2,
                      text >= 1.2
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions: PatternSynonyms
                      NoImplicitPrelude
                      OverloadedStrings
                      DeriveFunctor
                      DeriveFoldable
                      DeriveTraversable
                      DeriveAnyClass
                      ViewPatterns
                      MultiParamTypeClasses
                      LambdaCase