name:          zot
version:       0.1.0.0
author:        Andrew Mcveigh
maintainer:    me@andrewmcveigh.com
build-type:    Simple
cabal-version: >= 2

library
  default-language:   Haskell2010
  build-depends:      base < 5,
                      containers >= 0.5.10,
                      HUnit >= 1.6,
                      lens == 4.15.4,
                      mtl >= 2.2,
                      protolude >= 0.2.1,
                      recursion-schemes == 5.0.2,
                      text >= 1.2
  hs-source-dirs:     src
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
  default-extensions: PatternSynonyms
                      NoImplicitPrelude
                      OverloadedStrings
                      DeriveFunctor
                      DeriveFoldable
                      DeriveTraversable
                      DeriveAnyClass
                      ViewPatterns
                      MultiParamTypeClasses
                      LambdaCase

test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Test.hs
  build-depends:
      base >= 4 && < 5
    , tasty >= 0.7
    , tasty-quickcheck >= 0.9
    , tasty-hunit >= 0.9
    , zot
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  default-extensions:
    PatternSynonyms
    NoImplicitPrelude
    OverloadedStrings
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveAnyClass
    ViewPatterns
    MultiParamTypeClasses
    LambdaCase